PipelineProcessor picking up pace